--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Dynamically generate skeletons for various languages."
 authors = [
     {name = "Alexander Brown", email = "alex.brown7711@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "coverage>=7.10.7",
+]
 requires-python = ">=3.13"
 readme = "README.md"
 license = {text = "MIT"}
